Fix link color in dark mode

--- a/layout/less/list.less
+++ b/layout/less/list.less
@@ -60,6 +60,6 @@
     a,
     a:hover,
     a:focus {
-        color: @black;
+        color: white;
     }
 }
